err/unweb.recipe.ploneftp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyftpdlib'...
Listing './lib/python3.5/site-packages/pyftpdlib/test'...
Listing './lib/python3.5/site-packages/pyftpdlib-1.5.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unweb'...
Listing './lib/python3.5/site-packages/unweb/recipe'...
Listing './lib/python3.5/site-packages/unweb/recipe/ploneftp'...
Compiling './lib/python3.5/site-packages/unweb/recipe/ploneftp/ctl.py'...
***   File "./lib/python3.5/site-packages/unweb/recipe/ploneftp/ctl.py", line 13
    print "Usage: ploneftp start|stop|fg"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unweb/recipe/ploneftp/tests'...
Compiling './lib/python3.5/site-packages/unweb/recipe/ploneftp/zope_ftpd.py'...
***   File "./lib/python3.5/site-packages/unweb/recipe/ploneftp/zope_ftpd.py", line 83
    except ftplib.all_errors, detail:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unweb.recipe.ploneftp-0.1.egg-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
